5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3113/executions/1594_1803.log
== TEST (2019-04-02 00:59:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
num =int(input("numero inteiro de quatro digitos:"))

n = num // 1 % 10
u = num // 10 % 10
p = num // 100 % 10
q = num // 1000 % 10

d1=n*2
d2=u*3
d3=p*4
d4=q*5

d1d2d3d4=(d1+d2+d3+d4)//11

p1=d1d2d3d4%11


print(qpun)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(qpun)
NameError: name 'qpun' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:00:01) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
num =int(input("numero inteiro de quatro digitos:"))

n = num // 1 % 10
u = num // 10 % 10
p = num // 100 % 10
q = num // 1000 % 10

d1=n*2
d2=u*3
d3=p*4
d4=q*5

d1d2d3d4=(d1+d2+d3+d4)//11

p1=d1d2d3d4%11


print(p1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(qpun)
NameError: name 'qpun' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 01:00:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
num =int(input("numero inteiro de quatro digitos:"))

n = num // 1 % 10
u = num // 10 % 10
p = num // 100 % 10
q = num // 1000 % 10

d1=n*2
d2=u*3
d3=p*4
d4=q*5

d1d2d3d4=(d1+d2+d3+d4)//11

p1=d1d2d3d4%11


print(p1)
-- EXECUTION TIME:
0.185332
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
0
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
4
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:01:11) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
num =int(input("numero inteiro de quatro digitos:"))

n = num // 1 % 10
u = num // 10 % 10
p = num // 100 % 10
q = num // 1000 % 10

d1=n*2
d2=u*3
d3=p*4
d4=q*5

d1d2d3d4=(d1+d2+d3+d4)

p1=d1d2d3d4%11


print(p1)
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 01:01:17) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
num =int(input("numero inteiro de quatro digitos:"))

n = num // 1 % 10
u = num // 10 % 10
p = num // 100 % 10
q = num // 1000 % 10

d1=n*2
d2=u*3
d3=p*4
d4=q*5

d1d2d3d4=(d1+d2+d3+d4)

p1=d1d2d3d4%11


print(p1)
-- EXECUTION TIME:
0.198282
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
